[gd_scene load_steps=28 format=3 uid="uid://bujysl0i1ktjq"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_tlp6d"]
[ext_resource type="Texture2D" uid="uid://cdc8isji4du24" path="res://art/characters/WhiteCatDie.png" id="2_dv4tp"]
[ext_resource type="Texture2D" uid="uid://4apsa2ms5k7w" path="res://art/characters/WhiteCatIdle.png" id="3_27adf"]
[ext_resource type="Texture2D" uid="uid://bnyjto7iuf5wm" path="res://art/characters/WhiteCatRun.png" id="4_7c4o3"]
[ext_resource type="AudioStream" uid="uid://dr2u544k1xuay" path="res://art/sound/gameover.wav" id="5_k1fwv"]
[ext_resource type="AudioStream" uid="uid://b1oo301qvks37" path="res://art/sound/Hit damage 1.wav" id="6_cvs0x"]

[sub_resource type="AtlasTexture" id="AtlasTexture_kec8y"]
atlas = ExtResource("2_dv4tp")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6jo5f"]
atlas = ExtResource("2_dv4tp")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_aiovl"]
atlas = ExtResource("2_dv4tp")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ibay8"]
atlas = ExtResource("2_dv4tp")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q5uqy"]
atlas = ExtResource("2_dv4tp")
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_akg7c"]
atlas = ExtResource("2_dv4tp")
region = Rect2(0, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k2pt1"]
atlas = ExtResource("2_dv4tp")
region = Rect2(0, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3vp2l"]
atlas = ExtResource("3_27adf")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pi6br"]
atlas = ExtResource("3_27adf")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x8xxk"]
atlas = ExtResource("3_27adf")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gxvwc"]
atlas = ExtResource("3_27adf")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lyab8"]
atlas = ExtResource("3_27adf")
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ay32x"]
atlas = ExtResource("3_27adf")
region = Rect2(0, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vm18o"]
atlas = ExtResource("4_7c4o3")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6mrrf"]
atlas = ExtResource("4_7c4o3")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1atym"]
atlas = ExtResource("4_7c4o3")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ay2l8"]
atlas = ExtResource("4_7c4o3")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xbwn6"]
atlas = ExtResource("4_7c4o3")
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lpxn4"]
atlas = ExtResource("4_7c4o3")
region = Rect2(0, 160, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_1jkr2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kec8y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6jo5f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aiovl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ibay8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q5uqy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_akg7c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k2pt1")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3vp2l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pi6br")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x8xxk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gxvwc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lyab8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ay32x")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vm18o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6mrrf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1atym")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ay2l8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xbwn6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lpxn4")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_4vm11"]
radius = 27.0
height = 56.0

[node name="Player" type="Area2D"]
position = Vector2(91, 112)
script = ExtResource("1_tlp6d")
metadata/_edit_group_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-0.499999, -9)
scale = Vector2(3.84375, 3.9375)
sprite_frames = SubResource("SpriteFrames_1jkr2")
animation = &"death"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_4vm11")

[node name="DeathAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_k1fwv")

[node name="HitAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_cvs0x")
volume_db = 10.0

[node name="Timers" type="Node2D" parent="."]

[node name="SpeedTimer" type="Timer" parent="Timers"]
wait_time = 3.0
one_shot = true

[node name="InvincibilityTimer" type="Timer" parent="Timers"]
wait_time = 3.0
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timers/SpeedTimer" to="." method="_on_speed_timer_timeout"]
[connection signal="timeout" from="Timers/InvincibilityTimer" to="." method="_on_invincibility_timer_timeout"]
